<resources>
	<!-- App Specific Strings -->
    <string name="app_name">RX8Club</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">RX8Club.com</string>
    <string name="app_description">This is an application designed to provide the user with a faster, and easier to use forum experience for current RX8Club.com members</string>    
    <string name="app_signature">Posted From RX8Club.com Android App</string>
    <string name="networkNotAvailable">No Internet Connection Available!</string>
    <string name="networkTimedOut">Network Timed Out</string>
    
    <!-- Category Screen String -->
    <string name="categoryDescription">My Description that is really long to make sure it doesn\'t overlap because sometimes when you have a long desc it does</string>
    <string name="categoryName">Here is a cool category name</string>
    <string name="categoryPost">Pst:\u0020</string>
    <string name="categoryThread">Thr:\u0020</string>
    <string name="categorySub">Sub:\u0020</string>
    
    <!-- New Thread Screen -->
    <string name="ntThreadName">Thread Name:</string>
    <string name="ntThreadPost">Post:\u0020</string>
    
    <!-- Inbox Buttons -->
    <string name="inboxNewPm">New PM</string>
    <string name="inboxInbox">Inbox Items</string>
    <string name="inboxSent">Sent Items</string>
    
    <!-- New PM Screen -->
    <string name="pmFrom">From:\u0020</string>
    <string name="pmRecipients">Recipients:\u0020</string>
    <string name="pmSubject">Subject:\u0020</string>
    <string name="pmMessage">Message:\u0020</string>
    <string name="pmSend">Send</string>
    <string name="pmDate">Date:\u0020</string>
    
    <!-- Rules Screen -->
    <string name="ruleSubject">Rule</string>
    
    <!-- New Reply Screen -->
    <string name="nrUserName">User Name Goes Here</string>
    <string name="nrUserTitle">User Title</string>
    <string name="nrPostDate">Post Date:\u0020</string>
    <string name="nrPostText">This is some random text oh man this is cool</string>
    
    <!-- Login Screen Strings -->
    <string name="loginPasswordInput">Password:\u0020</string>
    <string name="loginUsernameInput">Username:\u0020</string>
    <string name="loginLoginButton">Login</string>
    <string name="loginGuestButton">Guest</string>
    <string name="loginAuthFailed">Sorry, Your Login Authentication Failed</string>
    <string name="loginFillInformation">Please Fill In Your Login Information</string>
    
    <!-- Thread Screen Strings -->
    <string name="tvTitle">This is one super duper long thread name that will wrap</string>
    <string name="tvStarted">Started By:\u0020</string>
    <string name="tvLastPost">Last Post:\u0020</string>
    <string name="tvLastPostPerson">The Thread Last Person</string>
    <string name="tvTotalPosts">Posts:\u0020</string>
    <string name="tvTotalViews">Views:\u0020</string>
    <string name="tvMyPosts">Yours:\u0020</string>
    <string name="tvForum">Forum:\u0020</string>
    <string name="commentText">Comment</string>
        
    <!-- Banner Fragment Strings -->
    <string name="bannerNewTopics">New Posts</string>
    <string name="bannerNewPms">Inbox</string>
    <string name="bannerProfileButton">Profile</string>
    <string name="bannerSearchButton">Search</string>
    <string name="bannerFavorites">Favorites</string>
    
    <!-- Menu Strings -->
    <string name="menuRefresh">Refresh Page</string>
    <string name="menuGoMain">Goto Main</string>
    <string name="menuLogon">Logon</string>
    <string name="menuLogoff">Logoff</string>
    <string name="menuPreferences">Preferences</string>
    <string name="menuControlPanel">User CP</string>
    <string name="menuUtilities">Utilities</string>
    <string name="menuAbout">About</string>
    
    <!-- Search Screen Strings -->
    <string name="searchString">Please Enter Search String:</string>
    <string name="searchType">Search Type:\u0020</string>
    <string name="userNameSearch">User Name</string>
    <string name="searchSearchButton">Search</string>
    <string name="searchDate">Search Date:\u0020</string>
    <string name="searchSort">Search Sort:\u0020</string>
    <string name="advancedOptions">Advanced Options:</string>
    <string name="threadContentSearch">Thread Content</string>
    <string name="threadTitleSearch">Thread Title Search</string>
    
    <!-- Control Panel Strings -->
    <string name="saveChanges">Save Changes</string>
    <string name="occupation">Occupation</string>
    <string name="interests">Interests</string>
    <string name="location">Location</string>
    <string name="biography">Biography</string>
    <string name="homepage">Homepage URL</string>
    <string name="userTitle">Custom User Title</string>
    
    <!-- About Screen Strings -->
    <string name="aboutstring">This free application was written by Paimon Sorornejad for the RX8Club.com community.  This application is designed to provide a mobile interface for Android based devices.</string>
    <string name="githublink">GitHub Link:\nhttps://github.com/paimonsoror/RX8Club.com-Forum-Application</string>
    <string name="websitelink">Website:\nhttp://www.normalexception.net</string>
    
    <!-- Pagination Strings -->
    <string name="first">First</string>
    <string name="previous">Prev</string>
    <string name="last">Last</string>
    <string name="next">Next</string>
    <string name="pageXofY">Page X of Y</string>
    
    <!-- Styler Strings -->
    <string name="bold">[b]</string>
    <string name="italic">[i]</string>
    <string name="underline">[u]</string>
    <string name="url">[url]</string>
    <string name="image">[img]</string>
    <string name="quote">[quote]</string>
    
    <!-- Dialog Strings -->
    <string name="dialogLogoffConfirm">Are you sure you want to logoff?</string>
    <string name="dialogPmDeleteConfirm">Are you sure you want to delete PM?</string>
    <string name="dialogClearingCache">Clearing Cache</string>
    <string name="dialogCacheCleared">Cache Cleared!</string>
    <string name="dialogFavoriteAdded">Favorite Added</string>
    <string name="dialogSignature">Signature:\u0020</string>
    <string name="dialogFilter">New Filter:\u0020</string>
    <string name="dialogFilterInvalid">Invalid Filter!</string>
    
    <!-- Misc Strings -->   
    <string name="bannerEmote">Emoticons</string>
    <string name="threadTitlePlaceholder">Thread Title</string>
    <string name="preferencesLabel">Application Preferences</string>
    <string name="addToFavorites">Add To Favorites</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="loading">Loading</string>
    <string name="pleaseWait">Please Wait&#8230;</string>
    <string name="loggingIn">Logging In</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Default">Default</string>
    <string name="cancel">Cancel</string>
    <string name="fillForm">Please Fill Form</string>
    <string name="connectionError">Sorry, there was an error connecting!</string>
    <string name="timeout">Connection Timed Out!</string>
    
    <!-- Utilities Strings -->
    <string name="util_compressionTitle">Compression Value</string>
    <string name="util_vinTitle">VIN</string>
    <string name="util_vinMessage">Please Enter Your VIN</string>
    <string name="util_vinDecode">Decode</string>
    
    <!-- Async Dialog Strings -->
	<string name="asyncDialogGrabThreads">Grabbing Threads</string>
	<string name="asyncDialogGrabForumContents">Grabbing Forum Contents</string>
	<string name="asyncDialogGrabThreadContents">Grabbing Thread Contents</string>
	<string name="asyncDialogCategorySort">Sorting Categories</string>
	<string name="asyncDialogUpdateCache">Updating Cache</string>
	<string name="asyncDialogPopulating">Populating List</string>
	<string name="asyncDialogGrabPMs">Grabbing PMs</string>
	<string name="asyncDialogLoadingPM">Loading PM</string>
	<string name="asyncDialogGrabProfile">Grabbing Profile</string>
	<string name="asyncDialogValidateProfile">Validating Profile</string>
	<string name="asyncDialogUploadAttachment">Uploading Attachment</string>
	<string name="asyncDialogUploadDone">Upload Done</string>
	<string name="asyncDialogSubmitting">Submitting Post</string>
	<string name="asyncDialogApplyFilters">Applying Filters</string>
	
	<!-- PTRView Strings -->
	<string name="ptrPull">Keep Pulling to Refresh&#8230;</string>
    <string name="ptrRelease">Release to Refresh&#8230;</string>
    <string name="ptrLoading">Loading&#8230;</string>
    <string name="ptrTap">Tap Here to Refresh&#8230;</string>

	<!-- String Arrays -->
	<string-array name="searchTypeArray">
	    <item>Thread Content</item>
	    <item>Thread Title</item>
	    <item>User Name</item>
	</string-array>
    <string-array name="searchDateArray">
        <item>Any Date</item>
        <item>Last Visit</item>
        <item>Yesterday</item>
        <item>1 Week Ago</item>
        <item>2 Weeks Ago</item>
        <item>1 Month Ago</item>
        <item>3 Months Ago</item>
        <item>6 Months Ago</item>
        <item>1 Year Ago</item>
    </string-array>
    <string-array name="searchDateArrayValue">
        <item>0</item>
        <item>lastvisit</item>
        <item>1</item>
        <item>7</item>
        <item>14</item>
        <item>30</item>
        <item>90</item>
        <item>180</item>
        <item>365</item>
    </string-array>
    <string-array name="searchSortArray">
        <item>Relevancy</item>
        <item>Title</item>
        <item>Reply Count</item>
        <item>View Count</item>
        <item>Thread Start Date</item>
        <item>Last Post Date</item>
        <item>User Name</item>
        <item>Forum</item>
    </string-array>
    <string-array name="searchSortArrayValue">
        <item>rank</item>
        <item>title</item>
        <item>replycount</item>
        <item>views</item>
        <item>threadstart</item>
        <item>lastpost</item>
        <item>postusername</item>
        <item>forum</item>
    </string-array>
    <string-array name="fontsizes">
        <item>Smaller</item>
        <item>Small</item>
        <item>Normal</item>
        <item>Big</item>
        <item>Bigger</item>
    </string-array>
    <string-array name="fontsizevalue">
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
    </string-array>
    
    <string-array name="utilities">
        <item>Compression Calculator</item>
        <item>VIN Decoder</item>
    </string-array>
    
    <string-array name="compressionAltitudeSpinnerValues">
        <item>Feet</item>
        <item>Meters</item>
    </string-array>
    
    <string-array name="compressionUnitSpinnerValues">
        <item>PSI</item>
        <item>KPA</item>
    </string-array>
    
    <string-array name="newPostsPage">
        <item>First</item>
        <item>Last</item>
    </string-array>
    
    <string-array name="languageValues">
        <item>English</item>
    </string-array>
    
    <string-array name="filterValues">
        <item>By Owner</item>
        <item>By Title</item>
        <item>By Last Responded</item>
    </string-array>
</resources>