<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content" >
     
	<TextView
	    android:id="@+id/pmRecipients"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/pmRecipients"
	    android:textColor="@android:color/black" />
	
	<EditText
	    android:id="@+id/pmRecipientsText"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text" >
	
	    <requestFocus />
	</EditText>
	
	<TextView
	    android:id="@+id/pmSubject"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/pmSubject"
	    android:textColor="@android:color/black" />
	
	<EditText
	    android:id="@+id/pmSubjectText"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text" >
	
	    <requestFocus />
	</EditText>
	
	<TextView
	    android:id="@+id/pmMessage"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingTop="20dip"
	    android:text="@string/pmMessage"
	    android:textColor="@android:color/black" />
	
	<EditText
	    android:id="@+id/pmMessageText"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="top"
	    android:layout_weight="1"
	    android:ems="10"
	    android:gravity="top"
	    android:inputType="textMultiLine" />
	
	<Button
	    android:id="@+id/newPmButton"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:text="@string/pmSend" />
</merge>