<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical" >     
        <TextView
            android:id="@+id/pmitem_commentlabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commentText" />

        <EditText
            android:id="@+id/pmitem_comment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/pmitem_submit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
        <Button
            android:id="@+id/pmitem_delete"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
</LinearLayout>