<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:gravity="center"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/inboxButtonNewPm"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/inboxNewPm"
        android:layout_weight="1"
        android:onClick="onClick" />
    
    <Button
        android:id="@+id/inboxButtonInbox"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/inboxInbox"
        android:layout_weight="1"
        android:onClick="onClick" />
    
    <Button
        android:id="@+id/inboxButtonSent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/inboxSent"
        android:layout_weight="1"
        android:onClick="onClick" />

</LinearLayout>