<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:padding="10dip" >

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="10dip"
	        android:text="About"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/versionNumber"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="Version Number: " />

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="30dip"
	        android:layout_marginTop="30dip"
	        android:text="@string/aboutstring"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/githublink" />

	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="30dip"
	        android:text="@string/websitelink" />

</LinearLayout>