<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip" >
 
    <!--  ListRow Left sied Thumbnail image -->
    <LinearLayout android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip">
 
        <ImageView
            android:id="@+id/tv_image"
            android:layout_width="15dip"
            android:layout_height="15dip"
            android:src="@drawable/black_mail"/>
 
    </LinearLayout>
 
    <!-- Title Of Thread-->

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_marginRight="60dp"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/tvTitle"
        android:textColor="#040404"
        android:textSize="12dip"
        android:textStyle="bold"
        android:typeface="sans" />
 
    <!-- Started By -->

    <TextView
        android:id="@+id/tv_postUser_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/tvStarted"
        android:textColor="#000000"
        android:textSize="10dip" />
    
    <TextView
        android:id="@+id/tv_postUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:textColor="#ffffff"
        android:textSize="10dip"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/tv_postUser_label"
        android:text="The Thread Starter" />
    
    <!-- Started By -->
    <TextView
        android:id="@+id/tv_lastUser_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_postUser_label"
        android:textColor="#000000"
        android:textSize="10dip"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/tvLastPost" />
    
    <TextView
        android:id="@+id/tv_lastUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_postUser"
        android:textColor="#ffffff"
        android:textSize="10dip"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/tv_lastUser_label"
        android:text="@string/tvLastPostPerson" />
 
    <!-- Rightend Post Counts -->
    <RelativeLayout 
        android:id="@+id/postcount_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/tv_lastUser">
        
            
    <LinearLayout 
        android:id="@+id/tv_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left">
        <TextView
	        android:id="@+id/tv_postCount_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:text="@string/tvTotalPosts"
	        android:layout_marginRight="5dip"
	        android:textSize="10dip"
	        android:textColor="#000000"
	        android:textStyle="bold"/>
        <TextView
	        android:id="@+id/tv_viewCount_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:text="@string/tvTotalViews"
	        android:layout_marginRight="5dip"
	        android:textSize="10dip"
	        android:textColor="#000000"
	        android:textStyle="bold"/>
        <TextView
	        android:id="@+id/tv_myCount_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:text="@string/tvMyPosts"
	        android:layout_marginRight="5dip"
	        android:textSize="10dip"
	        android:textColor="#000000"
	        android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/tv_label_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_labels"
        android:orientation="vertical"
        android:gravity="right">
       <TextView
	        android:id="@+id/tv_postCount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:text="5:45"
	        android:layout_marginRight="5dip"
	        android:textSize="10dip"
	        android:textColor="#ffffff"
	        android:textStyle="bold"/>   	    
	    
	    <TextView
	        android:id="@+id/tv_viewCount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:text="5:45"
	        android:layout_marginRight="5dip"
	        android:textSize="10dip"
	        android:textColor="#ffffff"
	        android:textStyle="bold"/>	    
	    
	    <TextView
	        android:id="@+id/tv_myCount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:text="5:45"
	        android:layout_marginRight="5dip"
	        android:textSize="10dip"
	        android:textColor="#ffffff"
	        android:textStyle="bold"/>
    </LinearLayout>
    
    </RelativeLayout>

    <ImageView
        android:id="@+id/tv_attachment"
        android:layout_width="15dip"
        android:layout_height="15dip"
        android:layout_alignBottom="@id/tv_lastUser_label"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/postcount_details"
        android:src="@drawable/paperclip" />
 
    <LinearLayout 
        android:id="@+id/tv_forum_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postcount_details"
        android:orientation="horizontal"
        android:layout_alignLeft="@id/tv_lastUser_label"
        android:visibility="gone">
	    <TextView
	        android:id="@+id/tv_forum_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:textColor="#000000"
	        android:textSize="10dip"
	        android:layout_marginTop="1dip"
	        android:text="@string/tvForum"/>
	    
	    <TextView
	        android:id="@+id/tv_forum"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dip"
	        android:ellipsize="end"
	        android:text=""
	        android:textColor="#000000"
	        android:textSize="10dip" />
	</LinearLayout>
</RelativeLayout>