<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/container_thread_dropshadow"
    android:orientation="horizontal">

    <!-- ListRow Left sied Thumbnail image -->
	<RelativeLayout
        android:id="@+id/titleContainer"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:background="#888888" 
        android:padding="3dip">
        
	    <TextView
	        android:id="@+id/nr_username"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/nrUserName"
	        android:textColor="#ffffff"
	        android:textSize="12dip"
	        android:textStyle="bold"
	        android:typeface="sans" />
	    
	    <TextView
	        android:id="@+id/nr_userTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dip"
	        android:layout_below="@id/nr_username"
	        android:text="@string/nrUserTitle"
	        android:textColor="#ffffff"
	        android:textSize="8dip" />
	    		
	    <LinearLayout
	        android:id="@+id/thumbnail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/nr_userTitle"
	        android:padding="3dip"
	        android:orientation="horizontal"
	        android:background="@drawable/container_avatar_square" >
	
	        <ImageView
	            android:id="@+id/nr_image"
	            android:layout_width="50dip"
	            android:layout_height="50dip"
	            android:src="@drawable/rotor_icon" />

	    </LinearLayout>
	    	        	
	    <!-- Title Of Thread -->

		<RelativeLayout
		    android:id="@+id/titleTextContainer"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/thumbnail"
		    android:padding="3dip" >
		    
		    <TextView
		        android:id="@+id/nr_userPosts"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="1dip"
		        android:text="1000"
		        android:textColor="#ffffff"
		        android:textSize="8dip" />
		    
		    <TextView
		        android:id="@+id/nr_userJoin"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/nr_userPosts"
		        android:layout_marginTop="1dip"
		        android:text="June 2013"
		        android:textColor="#ffffff"
		        android:textSize="8dip" />
		    
		    <TextView
		        android:id="@+id/nr_postDate_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/nr_userJoin"
		        android:layout_marginTop="10dip"
		        android:text="@string/nrPostDate"
		        android:textColor="#ffffff"
		        android:textSize="8dip" />
		    
		    <TextView
		        android:id="@+id/nr_postDate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/nr_userJoin"
		        android:layout_marginTop="10dip"
		        android:layout_toRightOf="@id/nr_postDate_label"
		        android:text="07-16-2013"
		        android:textColor="#ffffff"
		        android:textSize="8dip" />
		</RelativeLayout>	
		 
		<RelativeLayout
	        android:id="@+id/nr_buttonContainer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/titleTextContainer"
	        android:padding="3dip">
			<ImageView
			    android:id="@+id/nr_quoteButton"
			    android:layout_width="15dip"
		        android:layout_height="15dip"	
		        android:layout_marginRight="10dp"    
			    android:src="@drawable/quote_icon"
			    android:focusable="false"/>
			
			<ImageView
			    android:id="@+id/nr_pmButton"
			    android:layout_width="15dip"
			    android:layout_height="15dip"
			    android:layout_toRightOf="@id/nr_quoteButton"
			    android:src="@drawable/black_mail"
			    android:focusable="false" />
			
			<ImageView
			    android:id="@+id/nr_editButton"
			    android:layout_width="15dip"
			    android:layout_height="15dip"
			    android:layout_marginRight="10dp"
			    android:layout_below="@id/nr_quoteButton"
			    android:src="@drawable/black_pencil_icon"
			    android:focusable="false" />
			
			<ImageView
			    android:id="@+id/nr_deleteButton"
			    android:layout_width="15dip"
		        android:layout_height="15dip"
		        android:layout_below="@id/nr_pmButton"
			    android:layout_toRightOf="@id/nr_editButton"
			    android:src="@drawable/black_x"
			    android:focusable="false"/>
		</RelativeLayout>		
	</RelativeLayout>
	<LinearLayout
	    android:id="@+id/postContainer"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_toRightOf="@id/titleContainer"
	    android:layout_alignParentTop="true"
	    android:background="#444444">

	    <TextView
	        android:id="@+id/nr_postText"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:cacheColorHint="#00000000"
	        android:paddingLeft="5dip"
	        android:paddingRight="5dip"
	        android:paddingTop="5dip"
	        android:scrollbars="none"
	        android:text="@string/nrPostText"
	        android:textColor="#ffffff"
	        android:textSize="8dip"
	        android:layout_weight="1" />
	</LinearLayout>
</LinearLayout>